--- a/package.json
+++ b/package.json
@@ -33,14 +33,18 @@
   "devDependencies": {
     "@eslint/js": "9.17.0",
     "@release-it/conventional-changelog": "10.0.0",
+    "@testing-library/react": "^16.2.0",
     "@types/node": "22.10.2",
+    "@types/react": "^19.0.8",
     "@vitest/coverage-v8": "2.1.8",
     "@vitest/eslint-plugin": "1.1.20",
     "console-fail-test": "0.5.0",
     "eslint": "9.17.0",
     "husky": "9.1.7",
+    "jotai": "^2.11.3",
     "lint-staged": "15.3.0",
     "prettier": "^3.4.2",
+    "react": "^19.0.0",
     "release-it": "17.10.0",
     "tsup": "8.3.5",
     "typescript": "5.7.2",
@@ -53,5 +57,9 @@
   "publishConfig": {
     "provenance": true
   },
-  "packageManager": "pnpm@10.2.0"
+  "packageManager": "pnpm@10.2.0",
+  "peerDependencies": {
+    "jotai": "^2.11.3",
+    "react": "^19.0.0"
+  }
 }
