--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vitest/eslint-plugin": "1.1.20",
     "console-fail-test": "0.5.0",
     "eslint": "9.17.0",
+    "happy-dom": "^16.8.1",
     "husky": "9.1.7",
     "jotai": "^2.11.3",
     "lint-staged": "15.3.0",
