--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "scripts": {
     "build": "tsup",
-    "format": "prettier .",
+    "format": "prettier . --write",
     "lint": "eslint . --max-warnings 0",
     "prepare": "husky",
     "test": "vitest",
